# Tachiyomi-TUI

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
src/backend/: bookmarks.rs  cache.rs  mangadex.rs  mod.rs
src/ui/: ui.rs
