[package]
name = "Tachiyomi-TUI"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
ratatui-image = { version = "10.0.2", features = ["tokio"] }
reqwest = { version = "0.13.1", features = ["json"] }
sqlx = "0.8.6"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
image = "0.25"
futures = "0.3"